<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="32dp"/>

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/login_hint"
            android:padding="16dp"
            android:background="@drawable/rounded_edit_text"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="16dp"
            android:background="@drawable/rounded_edit_text"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_marginBottom="32dp"/>

        <TextView
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/continue_button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>
</ScrollView>
